# mammoth-frontend-cpp

./: CMakeLists.txt  README.md
src/: lexer.h
src/test/: test_lexer.cpp
